[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchcontext"
version = "0.1.0"
description = "Generate issue-specific context packs for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yufeng He" }]
keywords = ["ai", "coding-agent", "context", "llm", "repository"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.8",
    "twine>=5",
]

[project.scripts]
patchcontext = "patchcontext.cli:main"

[project.urls]
Homepage = "https://github.com/he-yufeng/PatchContext"
Repository = "https://github.com/he-yufeng/PatchContext"
Issues = "https://github.com/he-yufeng/PatchContext/issues"

[tool.hatch.build.targets.wheel]
packages = ["patchcontext"]

[tool.ruff]
line-length = 100
target-version = "py310"

